--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+
         <activity
             android:name=".MessagesListActivity"
             android:label="@string/app_name"
@@ -25,7 +27,15 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH" />
+            </intent-filter>
+            <meta-data android:name="android.app.default_searchable"
+                android:value=".SearchResultsActivity"/>
+
         </activity>
+
+
         <activity
             android:name=".MessagesDetailActivity"
             android:parentActivityName=".MessagesListActivity"
@@ -34,6 +44,19 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.kaidoh.mayuukhvarshney.textem.MessagesListActivity" />
+        </activity>
+
+        <activity android:name=".SearchResultsActivity"
+            android:theme="@style/AppTheme.NoActionBar"
+            android:parentActivityName=".MessagesDetailActivity"
+            >
+        <intent-filter>
+            <action android:name="android.intent.action.SEARCH" />
+            <category android:name="android.intent.category.DEFAULT" />
+        </intent-filter>
+            <meta-data
+                android:name="android.app.searchable"
+                android:resource="@xml/searchable" />
         </activity>
         <activity android:name=".ComposeMessageActivity"
             android:parentActivityName=".MessagesDetailActivity"
